uniffi/tests/snapshots/custom_types__handle_failed_lift.snap
---
source: uniffi/tests/custom_types.rs
expression: ffi_error
---
Failed to convert arg 'record':
Lifting custom type `custom_types::ValidatedString` from FFI type `alloc::string::String` failed at uniffi/tests/custom_types.rs:39

Caused by:
    Value cannot contain 'invalid'
