uniffi/tests/snapshots/custom_types__string_validation_failure.snap
---
source: uniffi/tests/custom_types.rs
expression: "format!(\"{:?}\", result.unwrap_err())"
---
While Converting Custom Type with <alloc::string::String as TryInto<custom_types::ValidatedString>>::try_into(val)

Caused by:
    Value cannot contain 'invalid'
